--- a/Styles/_trendingGifos.scss
+++ b/Styles/_trendingGifos.scss
@@ -37,17 +37,32 @@
       display: none;
     }
     #carruselTrendingGifos {
-      display: grid;
-      grid-template-columns: 64.8vw 64.8vw 64.8vw;
-      grid-gap: 5.866666666vw;
+      display: flex;
       overflow: scroll;
+      grid-template-columns: 64.8vw 64.8vw 64.8vw 64.8vw 64.8vw 64.8vw;
+      grid-gap: 5.866666666vw;
       margin-bottom: 21.8666666vw;
       height: 49.866667vw;
       margin-left: 5.86666666vw;
-      img {
-        width: 64.8vw;
-        height: 49.866667vw;
-        margin: 0 2.9333333vw 0 2.9333333vw;
+      .divHoverContenedor {
+        position: relative;
+        .divHover {
+          width: 41.6vw;
+          height: 32vw;
+          background-color: rgba(87, 46, 229, 0.8);
+          display: none;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 10;
+        }
+        .imgBuscada {
+          width: 64.8vw;
+          height: 49.866667vw;
+          margin: 0 2.9333333vw 0 2.9333333vw;
+          display: block;
+          z-index: 0;
+        }
       }
     }
   }
@@ -177,16 +192,25 @@
         margin-bottom: 0;
         margin-left: 1.527777vw;
         margin-right: 1.7361111vw;
-        .imgBuscadaCarrusel {
-          width: 24.792vw;
-          height: 19.098vw;
-          margin: 0;
-        }
-        #imagenCarrusel1 {
-          margin-left: 0;
-        }
-        #imagenCarrusel3 {
-          margin-right: 1.736111vw;
+        .divHoverContenedor {
+          position: relative;
+          .divHover {
+            width: 41.6vw;
+            height: 32vw;
+            background-color: rgba(87, 46, 229, 0.8);
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 10;
+          }
+          .imgBuscada {
+            width: 24.792vw;
+            height: 19.098vw;
+            margin: 0;
+            display: block;
+            z-index: 0;
+          }
         }
       }
       #flechaDerecha {
