--- a/style.css
+++ b/style.css
@@ -661,21 +661,39 @@ body {
 }
 
 #trendingGifos #carrusel #carruselTrendingGifos {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 64.8vw 64.8vw 64.8vw;
-      grid-template-columns: 64.8vw 64.8vw 64.8vw;
-  grid-gap: 5.866666666vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   overflow: scroll;
+  -ms-grid-columns: 64.8vw 64.8vw 64.8vw 64.8vw 64.8vw 64.8vw;
+      grid-template-columns: 64.8vw 64.8vw 64.8vw 64.8vw 64.8vw 64.8vw;
+  grid-gap: 5.866666666vw;
   margin-bottom: 21.8666666vw;
   height: 49.866667vw;
   margin-left: 5.86666666vw;
 }
 
-#trendingGifos #carrusel #carruselTrendingGifos img {
+#trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor {
+  position: relative;
+}
+
+#trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover {
+  width: 41.6vw;
+  height: 32vw;
+  background-color: rgba(87, 46, 229, 0.8);
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+#trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .imgBuscada {
   width: 64.8vw;
   height: 49.866667vw;
   margin: 0 2.9333333vw 0 2.9333333vw;
+  display: block;
+  z-index: 0;
 }
 
 #trendingGifos #flechaDerecha {
@@ -814,16 +832,25 @@ body {
     margin-left: 1.527777vw;
     margin-right: 1.7361111vw;
   }
-  #trendingGifos #carrusel #carruselTrendingGifos .imgBuscadaCarrusel {
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor {
+    position: relative;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover {
+    width: 41.6vw;
+    height: 32vw;
+    background-color: rgba(87, 46, 229, 0.8);
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .imgBuscada {
     width: 24.792vw;
     height: 19.098vw;
     margin: 0;
-  }
-  #trendingGifos #carrusel #carruselTrendingGifos #imagenCarrusel1 {
-    margin-left: 0;
-  }
-  #trendingGifos #carrusel #carruselTrendingGifos #imagenCarrusel3 {
-    margin-right: 1.736111vw;
+    display: block;
+    z-index: 0;
   }
   #trendingGifos #carrusel #flechaDerecha {
     display: block;
