--- a/style.css
+++ b/style.css
@@ -910,6 +910,18 @@ body {
   z-index: 10;
 }
 
+#busqueda #galeria .divHoverContenedor #btnsPintadosDesktop #btnFavPintado {
+  z-index: 1;
+}
+
+#busqueda #galeria .divHoverContenedor #btnsPintadosDesktop #btnDescargarPintado {
+  z-index: 1;
+}
+
+#busqueda #galeria .divHoverContenedor #btnsPintadosDesktop #btnAmpliarPintado {
+  z-index: 1;
+}
+
 #busqueda #galeria .divHoverContenedor .imgBuscada {
   width: 41.6vw;
   height: 32vw;
