--- a/Styles/_busqueda.scss
+++ b/Styles/_busqueda.scss
@@ -38,6 +38,17 @@
         left: 0;
         z-index: 10;
       }
+      #btnsPintadosDesktop {
+        #btnFavPintado {
+          z-index: 1;
+        }
+        #btnDescargarPintado {
+          z-index: 1;
+        }
+        #btnAmpliarPintado {
+          z-index: 1;
+        }
+      }
       .imgBuscada {
         width: 41.6vw;
         height: 32vw;
@@ -59,6 +70,7 @@
 .imgBuscada:hover ~ .divHover {
   display: block;
 }
+
 //Busqueda Desktop:
 @media only screen and (min-width: 1440px) {
   #busqueda {
