--- a/Styles/_favoritos.scss
+++ b/Styles/_favoritos.scss
@@ -22,9 +22,35 @@
     margin: 0 5.6vw 0 5.6vw;
     grid-gap: 5.6vw;
     margin-bottom: 20.8vw;
-    img {
-      width: 41.6vw;
-      height: 32vw;
+    .divHoverContenedor {
+      position: relative;
+      .divHover {
+        width: 41.6vw;
+        height: 32vw;
+        background-color: rgba(87, 46, 229, 0.8);
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+      }
+      #btnsPintadosDesktop {
+        #btnFavPintado {
+          z-index: 1;
+        }
+        #btnDescargarPintado {
+          z-index: 1;
+        }
+        #btnAmpliarPintado {
+          z-index: 1;
+        }
+      }
+      .imgBuscada {
+        width: 41.6vw;
+        height: 32vw;
+        display: block;
+        z-index: 0;
+      }
     }
   }
   #btnVerMasFav {
@@ -38,6 +64,7 @@
 @media only screen and (min-width: 1440px) {
   #sectionFavoritos {
     margin-bottom: 5.486111111vw;
+
     #tituloFavoritos {
       color: #572ee5;
       font-size: 2.430555vw;
@@ -57,14 +84,47 @@
       .divHoverContenedor {
         position: relative;
         .divHover {
-          width: 41.6vw;
-          height: 32vw;
+          width: 18.0555555vw;
+          height: 13.888888vw;
           background-color: rgba(87, 46, 229, 0.8);
           display: none;
           position: absolute;
           top: 0;
           left: 0;
           z-index: 10;
+          #btnsPintadosDesktop {
+            margin: 0.6944444vw 0.6944444vw 6.25vw 9.2361111111vw;
+            #btnFavPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+            }
+            #btnDescargarPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+              margin-left: 0.4166666vw;
+            }
+            #btnAmpliarPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+              margin-left: 0.4166666vw;
+            }
+          }
+          #infoImgPintDesktop {
+            margin-left: 0.90277777vw;
+            #usuarioPintado {
+              font-size: 0.88vw;
+              color: #ffffff;
+              font-family: "Roboto", sans-serif;
+              margin-bottom: 0.34722222vw;
+            }
+            #tituloPintado {
+              color: #ffffff;
+              font-family: "Roboto", sans-serif;
+              font-weight: bold;
+              font-size: 1vw;
+              margin: 0;
+            }
+          }
         }
         .imgBuscada {
           width: 18.0555555vw;
@@ -78,6 +138,7 @@
       width: 8.81944444vw;
       height: 3.47222222vw;
       margin-left: 45.625vw;
+      margin-bottom: 5.48611111vw;
     }
   }
 }
