--- a/style.css
+++ b/style.css
@@ -614,7 +614,7 @@ body {
 
 #trendingGifos {
   background-color: #f3f5f8;
-  margin-bottom: 12.533333333vw;
+  padding-bottom: 12.533333333vw;
   position: relative;
 }
 
@@ -654,6 +654,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 0;
 }
 
 #trendingGifos #carrusel #flechaIzquierda {
@@ -703,7 +704,7 @@ body {
 @media only screen and (min-width: 800px) {
   #trendingGifos {
     background-color: #f3f5f8;
-    margin-bottom: 12.533333333vw;
+    padding-bottom: 12.533333333vw;
     position: relative;
   }
   #trendingGifos #textosTrending {
@@ -738,6 +739,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-bottom: 0;
   }
   #trendingGifos #carrusel #flechaIzquierda {
     display: none;
@@ -766,7 +768,7 @@ body {
 @media only screen and (min-width: 1440px) {
   #trendingGifos {
     background-color: #f3f5f8;
-    margin-bottom: 12.638888vw;
+    padding-bottom: 12.638888vw;
     position: relative;
   }
   #trendingGifos #textosTrending {
@@ -809,7 +811,7 @@ body {
     display: -ms-flexbox;
     display: flex;
     margin-left: 6.527777vw;
-    margin-bottom: 12.63888vw;
+    margin-bottom: 0vw;
     margin-right: 6.3888888vw;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -836,14 +838,56 @@ body {
     position: relative;
   }
   #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover {
-    width: 41.6vw;
-    height: 32vw;
+    width: 24.792vw;
+    height: 19.098vw;
     background-color: rgba(87, 46, 229, 0.8);
     display: none;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #btnsPintadosDesktop {
+    margin: 0.6944444vw 0.6944444vw 9.6527777777vw 9.2361111111vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #btnsPintadosDesktop #btnFavPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin: 0;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #btnsPintadosDesktop #btnDescargarPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin-left: 0.76388888888vw;
+    margin-right: 0.6944444vw;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #btnsPintadosDesktop #btnAmpliarPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #infoImgPintDesktop {
+    margin-left: 1.25vw;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #infoImgPintDesktop #usuarioPintado {
+    font-size: 0.88vw;
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 0.34722222vw;
+  }
+  #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .divHover #infoImgPintDesktop #tituloPintado {
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 1vw;
+    margin: 0;
   }
   #trendingGifos #carrusel #carruselTrendingGifos .divHoverContenedor .imgBuscada {
     width: 24.792vw;
@@ -1240,9 +1284,38 @@ body {
   margin-bottom: 20.8vw;
 }
 
-#sectionFavoritos #galeriaFav img {
+#sectionFavoritos #galeriaFav .divHoverContenedor {
+  position: relative;
+}
+
+#sectionFavoritos #galeriaFav .divHoverContenedor .divHover {
   width: 41.6vw;
   height: 32vw;
+  background-color: rgba(87, 46, 229, 0.8);
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+#sectionFavoritos #galeriaFav .divHoverContenedor #btnsPintadosDesktop #btnFavPintado {
+  z-index: 1;
+}
+
+#sectionFavoritos #galeriaFav .divHoverContenedor #btnsPintadosDesktop #btnDescargarPintado {
+  z-index: 1;
+}
+
+#sectionFavoritos #galeriaFav .divHoverContenedor #btnsPintadosDesktop #btnAmpliarPintado {
+  z-index: 1;
+}
+
+#sectionFavoritos #galeriaFav .divHoverContenedor .imgBuscada {
+  width: 41.6vw;
+  height: 32vw;
+  display: block;
+  z-index: 0;
 }
 
 #sectionFavoritos #btnVerMasFav {
@@ -1280,14 +1353,47 @@ body {
     position: relative;
   }
   #sectionFavoritos #galeriaFav .divHoverContenedor .divHover {
-    width: 41.6vw;
-    height: 32vw;
+    width: 18.0555555vw;
+    height: 13.888888vw;
     background-color: rgba(87, 46, 229, 0.8);
     display: none;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #btnsPintadosDesktop {
+    margin: 0.6944444vw 0.6944444vw 6.25vw 9.2361111111vw;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #btnsPintadosDesktop #btnFavPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #btnsPintadosDesktop #btnDescargarPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin-left: 0.4166666vw;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #btnsPintadosDesktop #btnAmpliarPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin-left: 0.4166666vw;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #infoImgPintDesktop {
+    margin-left: 0.90277777vw;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #infoImgPintDesktop #usuarioPintado {
+    font-size: 0.88vw;
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 0.34722222vw;
+  }
+  #sectionFavoritos #galeriaFav .divHoverContenedor .divHover #infoImgPintDesktop #tituloPintado {
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 1vw;
+    margin: 0;
   }
   #sectionFavoritos #galeriaFav .divHoverContenedor .imgBuscada {
     width: 18.0555555vw;
@@ -1299,6 +1405,7 @@ body {
     width: 8.81944444vw;
     height: 3.47222222vw;
     margin-left: 45.625vw;
+    margin-bottom: 5.48611111vw;
   }
 }
 
