--- a/Styles/_grabador.scss
+++ b/Styles/_grabador.scss
@@ -20,6 +20,8 @@
       }
     }
     #grabador {
+      width: 47.777777777vw;
+      height: 27.08333333vw;
       margin-right: 4.7857142vw;
       #grabacionInterfaz {
         width: 47.777777777vw;
@@ -28,10 +30,15 @@
         display: flex;
         flex-direction: column;
         #grabacionUsuario {
+          width: 47.777777777vw;
+          height: 27.08333333vw;
+          display: flex;
           #cuadradosArriba {
             margin-top: 1.38888888vw;
-            margin-bottom: 6.041666vw;
+            margin-bottom: 0;
             display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             #cuadrado1 {
               border-left: 1px solid #50e3c2;
               border-top: 1px solid #50e3c2;
@@ -40,17 +47,66 @@
               height: 1.7361111vw;
             }
             #cuadrado2 {
-              border-right: 1px solid #50e3c2;
-              border-top: 1px solid #50e3c2;
+              border-left: 1px solid #50e3c2;
+              border-bottom: 1px solid #50e3c2;
               width: 1.7361111vw;
-              margin-right: 1.3888888vw;
-              margin-left: 41.388888vw;
               height: 1.875vw;
+              margin-left: 1.458333vw;
+              margin-bottom: 1.31944444vw;
             }
           }
-          #textosGrabacion {
-            margin-bottom: 5.3472222vw;
+          #textosGrabacionYVideo {
+            margin-bottom: 0;
+            margin-left: 1.597222vw;
+            #textoGrabacionYvideoPintado {
+              display: none;
+              position: absolute;
+              z-index: 1;
+              background-color: #572ee5;
+              opacity: 0.6;
+              width: 33.333333vw;
+              height: 22.2222vw;
+              margin-top: 2.430555vw;
+              margin-left: 3.958333vw;
+              margin-right: 3.958333vw;
+              #cuadrosVideoPintado {
+                display: none;
+                margin-top: 0.763888vw;
+                margin-right: 0.763888vw;
+                margin-left: 27.361111vw;
+                justify-content: space-between;
+              }
+              #imgCargando {
+                margin-top: 8.472222222vw;
+                margin-left: 15.90277vw;
+                margin-bottom: 0.69444vw;
+              }
+              #textoSubiendoGifo {
+                font-family: "Montserrat", sans-serif;
+                font-weight: bold;
+                color: white;
+                text-align: center;
+              }
+            }
+            #video {
+              object-fit: fill;
+              display: none;
+              width: 33.333333vw;
+              height: 22.2222vw;
+              margin-top: 2.430555vw;
+              margin-left: 3.958333vw;
+              margin-right: 3.958333vw;
+            }
+            #mostrarVideo {
+              width: 33.333333vw;
+              height: 22.2222vw;
+              display: none;
+            }
             #tituloGrabacion {
+              margin-top: 9.30555555vw;
+              margin-right: 1.5972222vw;
+              width: 38.194444vw;
+              display: block;
               text-align: center;
               color: #572ee5;
               font-family: "Montserrat", sans-serif;
@@ -78,79 +134,119 @@
             }
           }
           #cuadradosAbajo {
+            margin-top: 0;
             margin-bottom: 1.3194444vw;
             display: flex;
-            margin-left: 1.4583333vw;
+            flex-direction: column;
             #cuadrado3 {
-              border-left: 1px solid #50e3c2;
-              border-bottom: 1px solid #50e3c2;
+              margin-top: 1.3888888vw;
+              border-right: 1px solid #50e3c2;
+              border-top: 1px solid #50e3c2;
               width: 1.7361111vw;
+              margin-right: 1.3888888vw;
               height: 1.875vw;
             }
             #cuadrado4 {
               border-right: 1px solid #50e3c2;
               border-bottom: 1px solid #50e3c2;
-              margin-left: 41.3194444vw;
               width: 1.875vw;
               height: 1.7361111vw;
+              margin-top: 20.76388888vw;
             }
           }
         }
       }
-      #btnsGrabacion {
+      #btnsGrabacionYCronometro {
         display: flex;
-        justify-content: space-around;
-        margin-left: 50%;
-        transform: translateX(-50%);
-        width: 10.208333vw;
-        margin-top: 2.0138888vw;
-        margin-bottom: 1.3194444vw;
-        #btnGrabacion1 {
-          width: 2.22222222vw;
-          height: 2.22222222vw;
-          border: 1px solid #572ee5;
-          border-radius: 50%;
-          text-align: center;
+        #btnsGrabacion {
           display: flex;
-          justify-content: center;
-          #textBtnGrabacion1 {
-            align-self: center;
-            font-family: "Roboto", sans-serif;
-            font-weight: 700;
-            color: #572ee5;
-            font-size: 1vw;
+          justify-content: space-around;
+          margin-left: 50%;
+          transform: translateX(-50%);
+          width: 10.208333vw;
+          margin-top: 1.666666vw;
+          margin-bottom: 1.3194444vw;
+          margin-right: 9.5833333vw;
+          #btnGrabacion1 {
+            width: 2.22222222vw;
+            height: 2.22222222vw;
+            border: 1px solid #572ee5;
+            border-radius: 50%;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            #textBtnGrabacion1 {
+              align-self: center;
+              font-family: "Roboto", sans-serif;
+              font-weight: 700;
+              color: #572ee5;
+              font-size: 1vw;
+            }
+          }
+          #btnGrabacion2 {
+            width: 2.22222222vw;
+            height: 2.22222222vw;
+            border: 1px solid #572ee5;
+            border-radius: 50%;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            #textBtnGrabacion2 {
+              align-self: center;
+              font-family: "Roboto", sans-serif;
+              font-weight: 700;
+              color: #572ee5;
+              font-size: 0.8vw;
+            }
+          }
+          #btnGrabacion3 {
+            width: 2.22222222vw;
+            height: 2.22222222vw;
+            border: 1px solid #572ee5;
+            border-radius: 50%;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            #textBtnGrabacion3 {
+              align-self: center;
+              font-family: "Roboto", sans-serif;
+              font-weight: 700;
+              color: #572ee5;
+              font-size: 1vw;
+            }
           }
         }
-        #btnGrabacion2 {
-          width: 2.22222222vw;
-          height: 2.22222222vw;
-          border: 1px solid #572ee5;
-          border-radius: 50%;
-          text-align: center;
-          display: flex;
-          justify-content: center;
-          #textBtnGrabacion2 {
-            align-self: center;
-            font-family: "Roboto", sans-serif;
-            font-weight: 700;
-            color: #572ee5;
-            font-size: 1vw;
+        #cronometro {
+          display: none;
+          align-items: flex-end;
+          margin-top: 2.0138888vw;
+          margin-bottom: 1.3194444vw;
+          color: #572ee5;
+          font-size: 0.9vw;
+          font-family: "Montserrat", sans-serif;
+          font-weight: bold;
+          line-height: 1vw;
+          :not(:last-child)::after {
+            content: ":";
           }
         }
-        #btnGrabacion3 {
-          width: 2.22222222vw;
-          height: 2.22222222vw;
-          border: 1px solid #572ee5;
-          border-radius: 50%;
-          text-align: center;
-          display: flex;
-          justify-content: center;
-          #textBtnGrabacion3 {
-            align-self: center;
-            font-family: "Roboto", sans-serif;
-            font-weight: 700;
+        #textoSubrayado {
+          align-items: center;
+          display: none;
+          flex-direction: column;
+          #textoCronometro {
+            font-size: 0.9027777vw;
+            line-height: 1.1111111vw;
+            height: 1.1111111vw;
+            margin-top: 2.1527777vw;
+            font-family: "Montserrat", sans-serif;
+            font-weight: bold;
             color: #572ee5;
-            font-size: 1vw;
+            margin-bottom: 0.10416666vw;
+          }
+          #subrayadoDelTexto {
+            width: 8.53472222vw;
+            border: 1px solid #5ed7c6;
           }
         }
       }
@@ -158,6 +254,7 @@
     #pelicula {
       #imgPelicula {
         margin-top: 26.56944444vw;
+        display: block;
       }
     }
   }
@@ -179,6 +276,60 @@
     display: flex;
     justify-content: center;
     #textoBtnComenzar {
+      color: #572ee5;
+      font-size: 0.7vw;
+      font-family: "Montserrat", sans-serif;
+      font-weight: bold;
+      align-self: center;
+    }
+  }
+  #btnGrabar {
+    display: none;
+    margin-top: 1.39583333333vw;
+    height: 3.472222vw;
+    width: 8.81944444vw;
+    border: 1px solid #572ee5;
+    border-radius: 3rem;
+    margin-left: 45.625vw;
+    text-align: center;
+    justify-content: center;
+    #textoBtnGrabar {
+      color: #572ee5;
+      font-size: 0.7vw;
+      font-family: "Montserrat", sans-serif;
+      font-weight: bold;
+      align-self: center;
+    }
+  }
+  #btnFinalizar {
+    display: none;
+    margin-top: 1.39583333333vw;
+    height: 3.472222vw;
+    width: 8.81944444vw;
+    border: 1px solid #572ee5;
+    border-radius: 3rem;
+    margin-left: 45.625vw;
+    text-align: center;
+    justify-content: center;
+    #textoBtnFinalizar {
+      color: #572ee5;
+      font-size: 0.7vw;
+      font-family: "Montserrat", sans-serif;
+      font-weight: bold;
+      align-self: center;
+    }
+  }
+  #btnSubirGifo {
+    display: none;
+    margin-top: 1.39583333333vw;
+    height: 3.472222vw;
+    width: 8.81944444vw;
+    border: 1px solid #572ee5;
+    border-radius: 3rem;
+    margin-left: 45.625vw;
+    text-align: center;
+    justify-content: center;
+    #textoBtnSubirGifo {
       color: #572ee5;
       font-size: 0.7vw;
       font-family: "Montserrat", sans-serif;
