--- a/style.css
+++ b/style.css
@@ -1536,6 +1536,8 @@ body {
 }
 
 #creadorGifos #parteGrabar #grabador {
+  width: 47.777777777vw;
+  height: 27.08333333vw;
   margin-right: 4.7857142vw;
 }
 
@@ -1552,12 +1554,27 @@ body {
           flex-direction: column;
 }
 
-#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosArriba {
-  margin-top: 1.38888888vw;
-  margin-bottom: 6.041666vw;
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario {
+  width: 47.777777777vw;
+  height: 27.08333333vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosArriba {
+  margin-top: 1.38888888vw;
+  margin-bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 #creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosArriba #cuadrado1 {
@@ -1569,19 +1586,77 @@ body {
 }
 
 #creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosArriba #cuadrado2 {
-  border-right: 1px solid #50e3c2;
-  border-top: 1px solid #50e3c2;
+  border-left: 1px solid #50e3c2;
+  border-bottom: 1px solid #50e3c2;
   width: 1.7361111vw;
-  margin-right: 1.3888888vw;
-  margin-left: 41.388888vw;
   height: 1.875vw;
+  margin-left: 1.458333vw;
+  margin-bottom: 1.31944444vw;
 }
 
-#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacion {
-  margin-bottom: 5.3472222vw;
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo {
+  margin-bottom: 0;
+  margin-left: 1.597222vw;
 }
 
-#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacion #tituloGrabacion {
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #textoGrabacionYvideoPintado {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: #572ee5;
+  opacity: 0.6;
+  width: 33.333333vw;
+  height: 22.2222vw;
+  margin-top: 2.430555vw;
+  margin-left: 3.958333vw;
+  margin-right: 3.958333vw;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #textoGrabacionYvideoPintado #cuadrosVideoPintado {
+  display: none;
+  margin-top: 0.763888vw;
+  margin-right: 0.763888vw;
+  margin-left: 27.361111vw;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #textoGrabacionYvideoPintado #imgCargando {
+  margin-top: 8.472222222vw;
+  margin-left: 15.90277vw;
+  margin-bottom: 0.69444vw;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #textoGrabacionYvideoPintado #textoSubiendoGifo {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #video {
+  -o-object-fit: fill;
+     object-fit: fill;
+  display: none;
+  width: 33.333333vw;
+  height: 22.2222vw;
+  margin-top: 2.430555vw;
+  margin-left: 3.958333vw;
+  margin-right: 3.958333vw;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #mostrarVideo {
+  width: 33.333333vw;
+  height: 22.2222vw;
+  display: none;
+}
+
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #tituloGrabacion {
+  margin-top: 9.30555555vw;
+  margin-right: 1.5972222vw;
+  width: 38.194444vw;
+  display: block;
   text-align: center;
   color: #572ee5;
   font-family: "Montserrat", sans-serif;
@@ -1591,11 +1666,11 @@ body {
   margin-bottom: 0.2083333333vw;
 }
 
-#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacion #tituloGrabacion #spanGifos {
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #tituloGrabacion #spanGifos {
   color: #50e3c2;
 }
 
-#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacion #textoGrabacion1 {
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #textoGrabacion1 {
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 0.94vw;
@@ -1603,7 +1678,7 @@ body {
   margin: 0;
 }
 
-#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacion #textoGrabacion2 {
+#creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #textosGrabacionYVideo #textoGrabacion2 {
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 0.94vw;
@@ -1612,29 +1687,41 @@ body {
 }
 
 #creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosAbajo {
+  margin-top: 0;
   margin-bottom: 1.3194444vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 1.4583333vw;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosAbajo #cuadrado3 {
-  border-left: 1px solid #50e3c2;
-  border-bottom: 1px solid #50e3c2;
+  margin-top: 1.3888888vw;
+  border-right: 1px solid #50e3c2;
+  border-top: 1px solid #50e3c2;
   width: 1.7361111vw;
+  margin-right: 1.3888888vw;
   height: 1.875vw;
 }
 
 #creadorGifos #parteGrabar #grabador #grabacionInterfaz #grabacionUsuario #cuadradosAbajo #cuadrado4 {
   border-right: 1px solid #50e3c2;
   border-bottom: 1px solid #50e3c2;
-  margin-left: 41.3194444vw;
   width: 1.875vw;
   height: 1.7361111vw;
+  margin-top: 20.76388888vw;
 }
 
-#creadorGifos #parteGrabar #grabador #btnsGrabacion {
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1644,84 +1731,131 @@ body {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   width: 10.208333vw;
+  margin-top: 1.666666vw;
+  margin-bottom: 1.3194444vw;
+  margin-right: 9.5833333vw;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion #btnGrabacion1 {
+  width: 2.22222222vw;
+  height: 2.22222222vw;
+  border: 1px solid #572ee5;
+  border-radius: 50%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion #btnGrabacion1 #textBtnGrabacion1 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  color: #572ee5;
+  font-size: 1vw;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion #btnGrabacion2 {
+  width: 2.22222222vw;
+  height: 2.22222222vw;
+  border: 1px solid #572ee5;
+  border-radius: 50%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion #btnGrabacion2 #textBtnGrabacion2 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  color: #572ee5;
+  font-size: 0.8vw;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion #btnGrabacion3 {
+  width: 2.22222222vw;
+  height: 2.22222222vw;
+  border: 1px solid #572ee5;
+  border-radius: 50%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #btnsGrabacion #btnGrabacion3 #textBtnGrabacion3 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  color: #572ee5;
+  font-size: 1vw;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #cronometro {
+  display: none;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   margin-top: 2.0138888vw;
   margin-bottom: 1.3194444vw;
-}
-
-#creadorGifos #parteGrabar #grabador #btnsGrabacion #btnGrabacion1 {
-  width: 2.22222222vw;
-  height: 2.22222222vw;
-  border: 1px solid #572ee5;
-  border-radius: 50%;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-#creadorGifos #parteGrabar #grabador #btnsGrabacion #btnGrabacion1 #textBtnGrabacion1 {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
   color: #572ee5;
-  font-size: 1vw;
+  font-size: 0.9vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  line-height: 1vw;
 }
 
-#creadorGifos #parteGrabar #grabador #btnsGrabacion #btnGrabacion2 {
-  width: 2.22222222vw;
-  height: 2.22222222vw;
-  border: 1px solid #572ee5;
-  border-radius: 50%;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #cronometro :not(:last-child)::after {
+  content: ":";
 }
 
-#creadorGifos #parteGrabar #grabador #btnsGrabacion #btnGrabacion2 #textBtnGrabacion2 {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #textoSubrayado {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #textoSubrayado #textoCronometro {
+  font-size: 0.9027777vw;
+  line-height: 1.1111111vw;
+  height: 1.1111111vw;
+  margin-top: 2.1527777vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
   color: #572ee5;
-  font-size: 1vw;
+  margin-bottom: 0.10416666vw;
 }
 
-#creadorGifos #parteGrabar #grabador #btnsGrabacion #btnGrabacion3 {
-  width: 2.22222222vw;
-  height: 2.22222222vw;
-  border: 1px solid #572ee5;
-  border-radius: 50%;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-#creadorGifos #parteGrabar #grabador #btnsGrabacion #btnGrabacion3 #textBtnGrabacion3 {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  color: #572ee5;
-  font-size: 1vw;
+#creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #textoSubrayado #subrayadoDelTexto {
+  width: 8.53472222vw;
+  border: 1px solid #5ed7c6;
 }
 
 #creadorGifos #parteGrabar #pelicula #imgPelicula {
   margin-top: 26.56944444vw;
+  display: block;
 }
 
 #creadorGifos #separadorGrabacion {
@@ -1749,6 +1883,78 @@ body {
 }
 
 #creadorGifos #btnComenzar #textoBtnComenzar {
+  color: #572ee5;
+  font-size: 0.7vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#creadorGifos #btnGrabar {
+  display: none;
+  margin-top: 1.39583333333vw;
+  height: 3.472222vw;
+  width: 8.81944444vw;
+  border: 1px solid #572ee5;
+  border-radius: 3rem;
+  margin-left: 45.625vw;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#creadorGifos #btnGrabar #textoBtnGrabar {
+  color: #572ee5;
+  font-size: 0.7vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#creadorGifos #btnFinalizar {
+  display: none;
+  margin-top: 1.39583333333vw;
+  height: 3.472222vw;
+  width: 8.81944444vw;
+  border: 1px solid #572ee5;
+  border-radius: 3rem;
+  margin-left: 45.625vw;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#creadorGifos #btnFinalizar #textoBtnFinalizar {
+  color: #572ee5;
+  font-size: 0.7vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#creadorGifos #btnSubirGifo {
+  display: none;
+  margin-top: 1.39583333333vw;
+  height: 3.472222vw;
+  width: 8.81944444vw;
+  border: 1px solid #572ee5;
+  border-radius: 3rem;
+  margin-left: 45.625vw;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#creadorGifos #btnSubirGifo #textoBtnSubirGifo {
   color: #572ee5;
   font-size: 0.7vw;
   font-family: "Montserrat", sans-serif;
