--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,6 @@
 
 @import "./Styles/misGifos";
 
-@import "./styles/grabador";
+@import "./Styles/grabador";
 
 @import "./Styles/imgAmplificada";
