--- a/Styles/_grabador.scss
+++ b/Styles/_grabador.scss
@@ -235,6 +235,8 @@
           display: none;
           flex-direction: column;
           #textoCronometro {
+            min-width: 8.8888888vw;
+            max-width: 8.8888888vw;
             font-size: 0.9027777vw;
             line-height: 1.1111111vw;
             height: 1.1111111vw;
