--- a/Styles/_misGifos.scss
+++ b/Styles/_misGifos.scss
@@ -22,9 +22,35 @@
     margin: 0 5.6vw 0 5.6vw;
     grid-gap: 5.6vw;
     margin-bottom: 20.8vw;
-    img {
-      width: 41.6vw;
-      height: 32vw;
+    .divHoverContenedorMisGifos {
+      position: relative;
+      .divHover {
+        width: 41.6vw;
+        height: 32vw;
+        background-color: rgba(87, 46, 229, 0.8);
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+      }
+      #btnsPintadosDesktop {
+        #btnFavPintado {
+          z-index: 1;
+        }
+        #btnDescargarPintado {
+          z-index: 1;
+        }
+        #btnAmpliarPintado {
+          z-index: 1;
+        }
+      }
+      .imgBuscada {
+        width: 41.6vw;
+        height: 32vw;
+        display: block;
+        z-index: 0;
+      }
     }
   }
   #btnVerMasMisGifos {
@@ -55,7 +81,7 @@
       grid-template-rows: 13.888888vw 13.888888vw 13.888888vw;
       margin: 0 10.90277777vw 5.416666666vw 10.83333vw;
       grid-gap: 2.013888vw;
-      .divHoverContenedor {
+      .divHoverContenedorMisGifos {
         position: relative;
         .divHover {
           width: 18.0555555vw;
@@ -66,6 +92,39 @@
           top: 0;
           left: 0;
           z-index: 10;
+          #btnsPintadosDesktop {
+            margin: 0.6944444vw 0.6944444vw 6.25vw 9.2361111111vw;
+            #btnTrashPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+            }
+            #btnDescargarPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+              margin-left: 0.4166666vw;
+            }
+            #btnAmpliarPintado {
+              width: 2.222222vw;
+              height: 2.222222vw;
+              margin-left: 0.4166666vw;
+            }
+          }
+          #infoImgPintDesktop {
+            margin-left: 0.90277777vw;
+            #usuarioPintado {
+              font-size: 0.88vw;
+              color: #ffffff;
+              font-family: "Roboto", sans-serif;
+              margin-bottom: 0.34722222vw;
+            }
+            #tituloPintado {
+              color: #ffffff;
+              font-family: "Roboto", sans-serif;
+              font-weight: bold;
+              font-size: 1vw;
+              margin: 0;
+            }
+          }
         }
         .imgBuscada {
           width: 18.0555555vw;
