--- a/style.css
+++ b/style.css
@@ -1442,9 +1442,38 @@ body {
   margin-bottom: 20.8vw;
 }
 
-#sectionMisGifos #galeriaMisGifos img {
+#sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos {
+  position: relative;
+}
+
+#sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover {
   width: 41.6vw;
   height: 32vw;
+  background-color: rgba(87, 46, 229, 0.8);
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+#sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos #btnsPintadosDesktop #btnFavPintado {
+  z-index: 1;
+}
+
+#sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos #btnsPintadosDesktop #btnDescargarPintado {
+  z-index: 1;
+}
+
+#sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos #btnsPintadosDesktop #btnAmpliarPintado {
+  z-index: 1;
+}
+
+#sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .imgBuscada {
+  width: 41.6vw;
+  height: 32vw;
+  display: block;
+  z-index: 0;
 }
 
 #sectionMisGifos #btnVerMasMisGifos {
@@ -1478,10 +1507,10 @@ body {
     margin: 0 10.90277777vw 5.416666666vw 10.83333vw;
     grid-gap: 2.013888vw;
   }
-  #sectionMisGifos #galeriaMisGifos .divHoverContenedor {
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos {
     position: relative;
   }
-  #sectionMisGifos #galeriaMisGifos .divHoverContenedor .divHover {
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover {
     width: 18.0555555vw;
     height: 13.888888vw;
     background-color: rgba(87, 46, 229, 0.8);
@@ -1491,7 +1520,40 @@ body {
     left: 0;
     z-index: 10;
   }
-  #sectionMisGifos #galeriaMisGifos .divHoverContenedor .imgBuscada {
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #btnsPintadosDesktop {
+    margin: 0.6944444vw 0.6944444vw 6.25vw 9.2361111111vw;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #btnsPintadosDesktop #btnTrashPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #btnsPintadosDesktop #btnDescargarPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin-left: 0.4166666vw;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #btnsPintadosDesktop #btnAmpliarPintado {
+    width: 2.222222vw;
+    height: 2.222222vw;
+    margin-left: 0.4166666vw;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #infoImgPintDesktop {
+    margin-left: 0.90277777vw;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #infoImgPintDesktop #usuarioPintado {
+    font-size: 0.88vw;
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 0.34722222vw;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .divHover #infoImgPintDesktop #tituloPintado {
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    font-size: 1vw;
+    margin: 0;
+  }
+  #sectionMisGifos #galeriaMisGifos .divHoverContenedorMisGifos .imgBuscada {
     width: 18.0555555vw;
     height: 13.888888vw;
     display: block;
@@ -1838,6 +1900,8 @@ body {
 }
 
 #creadorGifos #parteGrabar #grabador #btnsGrabacionYCronometro #textoSubrayado #textoCronometro {
+  min-width: 8.8888888vw;
+  max-width: 8.8888888vw;
   font-size: 0.9027777vw;
   line-height: 1.1111111vw;
   height: 1.1111111vw;
@@ -2075,5 +2139,78 @@ body {
   border-radius: 1vw;
   border: 1px solid rgba(156, 175, 195, 0.5);
   margin-left: 7.7333333vw;
+}
+
+#sectionImgAmplificadaDesktop {
+  display: none;
+}
+
+#sectionImgAmplificadaDesktop #imgCloseDesktop {
+  margin-top: 4.6111111vw;
+  margin-left: 79.6111111vw;
+  margin-bottom: 5.444444444vw;
+}
+
+#sectionImgAmplificadaDesktop #contImgDesktop {
+  margin-left: 20.1388888vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#sectionImgAmplificadaDesktop #contImgDesktop #imgFlechaIzqDesktop {
+  margin-right: 1.736111vw;
+}
+
+#sectionImgAmplificadaDesktop #contImgDesktop #imgAmpliadaDesktop {
+  width: 48.2638888vw;
+  height: 26.736111vw;
+  margin-right: 1.736111vw;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop {
+  margin-left: 24.6527777vw;
+  margin-right: 27.1vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop #textosImgAmpladaDesktop {
+  margin-top: 1.875vw;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop #textosImgAmpladaDesktop #usuarioImgDesktop {
+  margin-bottom: 0.416666666vw;
+  font-family: "Roboto", sans-serif;
+  font-size: 1vw;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop #textosImgAmpladaDesktop #tituloImgDesktop {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  margin-top: 0;
+  font-size: 1.1vw;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop #btnsImgAmpladaDesktop {
+  margin-top: 1.52777777vw;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop #btnsImgAmpladaDesktop #corazonAmpliadoDesktop {
+  border: 1px solid #ced7e1;
+  border-radius: 0.3rem;
+  margin-right: 1.45833333vw;
+}
+
+#sectionImgAmplificadaDesktop #infoImgAmplaiadaDesktop #btnsImgAmpladaDesktop #descargaAmplaidaDesktop {
+  border: 1px solid #ced7e1;
+  border-radius: 0.3rem;
 }
 /*# sourceMappingURL=style.css.map */
