--- a/Styles/_darkmode.scss
+++ b/Styles/_darkmode.scss
@@ -53,6 +53,86 @@ body.darkmode {
   color: #ffffff;
 }
 
+.darkmode #busqueda #tituloBusqueda {
+  color: #ffffff;
+}
+.darkmode #creadorGifos #parteGrabar #grabador #grabacionInterfaz {
+  border: 1px solid #ffffff;
+}
+
+.darkmode
+  #creadorGifos
+  #parteGrabar
+  #grabador
+  #btnsGrabacionYCronometro
+  #btnsGrabacion
+  #btnGrabacion1 {
+  border: 1px solid #ffffff;
+}
+
+.darkmode
+  #creadorGifos
+  #parteGrabar
+  #grabador
+  #btnsGrabacionYCronometro
+  #btnsGrabacion
+  #btnGrabacion1
+  #textBtnGrabacion1 {
+  color: #ffffff;
+}
+
+.darkmode
+  #creadorGifos
+  #parteGrabar
+  #grabador
+  #btnsGrabacionYCronometro
+  #btnsGrabacion
+  #btnGrabacion2 {
+  border: 1px solid #ffffff;
+}
+
+.darkmode
+  #creadorGifos
+  #parteGrabar
+  #grabador
+  #btnsGrabacionYCronometro
+  #btnsGrabacion
+  #btnGrabacion2
+  #textBtnGrabacion2 {
+  color: #ffffff;
+}
+
+.darkmode
+  #creadorGifos
+  #parteGrabar
+  #grabador
+  #btnsGrabacionYCronometro
+  #btnsGrabacion
+  #btnGrabacion3 {
+  border: 1px solid #ffffff;
+}
+.darkmode
+  #creadorGifos
+  #parteGrabar
+  #grabador
+  #btnsGrabacionYCronometro
+  #btnsGrabacion
+  #btnGrabacion3
+  #textBtnGrabacion3 {
+  color: #ffffff;
+}
+.darkmode #creadorGifos #separadorGrabacion {
+  background-color: #ffffff;
+}
+.darkmode #creadorGifos #btnComenzar {
+  border: 1px solid #ffffff;
+}
+.darkmode #creadorGifos #btnComenzar #textoBtnComenzar {
+  color: #ffffff;
+}
+.darkmode #sectionImagenAmplificada {
+  background-color: #46474b;
+}
 @media only screen and (min-width: 1440px) {
   .darkmode #header #container {
     border-top: 0.347439371vw solid #000000;
