--- a/Styles/_imgAmpliDesktop.scss
+++ b/Styles/_imgAmpliDesktop.scss
@@ -44,9 +44,10 @@
         border-radius: 0.3rem;
         margin-right: 1.45833333vw;
       }
-      #descargaAmplaidaDesktop {
-        border: 1px solid #ced7e1;
+      #descargaAmpliadaDesktop {
         border-radius: 0.3rem;
+        width: 2.5vw;
+        height: 2.5vw;
       }
     }
   }
