--- a/Styles/_imgAmplificada.scss
+++ b/Styles/_imgAmplificada.scss
@@ -67,6 +67,8 @@
         #btnDescargarImgAmpliada {
           border-radius: 1vw;
           margin-left: 7.7333333vw;
+          width: 9.6vw;
+          height: 9.6vw;
         }
       }
     }
