--- a/Styles/_trendingGifos.scss
+++ b/Styles/_trendingGifos.scss
@@ -220,7 +220,7 @@
                 margin-left: 0.76388888888vw;
                 margin-right: 0.6944444vw;
               }
-              #btnAmpliarPintado {
+              .btnAmpliarPintado {
                 width: 2.222222vw;
                 height: 2.222222vw;
                 margin-right: 0;
